# synthetic_pred

./: .gitignore  LICENSE  README.md  config.ps1  pyproject.toml
notebooks/: explore-0.0.1.ipynb  utils.py
synthetic_pred/: __init__.py  config.py  utils.py
synthetic_pred/features/: features.py
synthetic_pred_module/calculator/: __init__.py  calculator.py  second.py
synthetic_pred_module/test_dir/: main.py
